<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.JoinTripSuccessActivity">

    <ImageView
        android:id="@+id/ivSuccess"
        android:layout_width="246dp"
        android:layout_height="146dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="91dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="67dp"
        android:src="@drawable/success"/>

    <TextView
        android:id="@+id/tvSuccessTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivSuccess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="85dp"
        android:layout_marginTop="35dp"
        android:textSize="22sp"
        android:text="@string/congratulations"/>

    <TextView
        android:id="@+id/tvSuccessSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSuccessTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="73dp"
        android:layout_marginTop="21dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:text="@string/joined_trip"/>

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSuccessTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/round_button"
        android:text="@string/done"
        android:textColor="@color/button_text_color"/>



</androidx.constraintlayout.widget.ConstraintLayout>