<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.splash.AppTourCopy">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/illustration4"/>

        <TextView
            android:layout_width="265dp"
            android:layout_height="116dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/royalBike"
            android:textColor="#ED7E2B"
            android:textSize="37sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RelativeLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnYes"
                android:layout_width="105dp"
                android:layout_height="42dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/yes_no_btn_pressed"
                android:gravity="center"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnNo"
                android:layout_width="105dp"
                android:layout_height="42dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/yes_no_btn_background"
                android:gravity="center"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/group4"
            android:layout_alignParentBottom="true"
            android:paddingLeft="23dp"
            android:paddingBottom="17dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/group1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>