<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="resetPasswordViewModel"
            type="com.example.finalrideapp.viewmodel.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.auth.ResetPassword">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/resetToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetToolbar">

            <ImageView
                android:layout_width="246dp"
                android:layout_height="149dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="47dp"
                android:layout_marginRight="67dp"
                android:src="@drawable/reset_group" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:gravity="center"
                android:text="@string/reset_password"
                android:textColor="#575656"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="51dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/new_password"
                android:paddingBottom="15dp"
                android:textColor="#4F504F"
                android:textSize="16sp"
                android:text="@={resetPasswordViewModel.newPassword}"/>

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="26dp"
                android:hint="@string/confirm_password"
                android:paddingBottom="15dp"
                android:textColor="#4F504F"
                android:textSize="16sp"
                android:text="@={resetPasswordViewModel.confirmPassword}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="29dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="reset"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:onClick="@{()->resetPasswordViewModel.resetOnClick()}"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>