<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.WelcomeFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="437dp"
                android:layout_height="251dp"
                android:src="@drawable/group"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="66dp"
                android:layout_marginTop="34px"
                android:layout_marginEnd="66dp"
                android:text="@string/home_text"
                android:textAlignment="center"
                android:textColor="@color/home_text_color"
                android:textSize="22dp"
                app:layout_constraintBottom_toTopOf="@+id/createTripButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv1"
                app:layout_constraintVertical_bias="0.445" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="66dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="66dp"
                android:text="@string/home_subtext"
                android:textAlignment="center"
                android:textColor="@color/home_text_color"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@+id/createTripButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv1" />

            <Button
                android:id="@+id/createTripButton"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="38dp"
                android:background="@drawable/round_button"
                android:text="@string/home_button"
                android:textColor="@color/button_text_color"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv2"

                />


            <!--  <com.google.android.material.bottomnavigation.BottomNavigationView
                  android:id="@+id/nav1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@drawable/gradient"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/createTripButton"
                  app:menu="@menu/bottom_navigation_bar"
                  android:theme="@style/navigation_theme"
                  android:layout_marginTop="45dp"
                  />-->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>